# vx300s-via-docker-wellplate

./: docker-compose.yaml
camera/: Dockerfile  docker-entrypoint.bash
config/: ros_cpp_logging.conf  ros_python_logging.conf
config/control/: control_parameters.yaml
config/perception/: filter_params.yaml  static_transforms.yaml  static_transforms.yaml.save
config/rviz/: arm_control.rviz
config/urdf/: vx300s.urdf.xacro
jupyter/: base.py  close_door.ipynb  open_door.ipynb  pullout.ipynb  putin.ipynb
scripts/: create_desktop_entry.bash
vx300s/: Dockerfile  arm_ctrl-docker-entrypoint.sh  arm_ctrl_rviz-docker-entrypoint.sh  arm_ctrl_setup.bash  docker-entrypoint.sh  jupyter-lab.sh  vx300s-docker-entrypoint.sh  xsarm_amd64_install.sh
vx300s/arm_apps/arm_ctrl/: CMakeLists.txt  package.xml
vx300s/arm_apps/arm_ctrl/launch/: arm_ctrl.launch
vx300s/arm_apps/arm_ctrl/scripts/: wellplate_picking.py
vx300s/arm_apps/arm_ctrl_msgs/: CMakeLists.txt  package.xml
vx300s/arm_apps/arm_ctrl_msgs/action/: ArmControl.action
vx300s/arm_apps/arm_ctrl_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
vx300s/arm_apps/arm_ctrl_rviz/launch/: rviz.launch
vx300s/arm_apps/arm_ctrl_rviz/src/: arm_ctrl_rviz.cpp  arm_ctrl_rviz.hpp
vx300s/scripts/: pick_place.py  test_motion.py  wellplate_picking.py
yad-scripts/: main.bash  restart_arm_ctrl.bash  restart_rviz.bash  startall.bash  stopall.bash
